--- a/public/index.html
+++ b/public/index.html
@@ -9,12 +9,16 @@
     <script src="js/controllers.js"></script>
 </head>
 <body ng-controller="PhoneListCtrl">
-
+<p>Hello, {{name}}!</p>
 <ul>
     <li ng-repeat="phone in phones">
         <span>{{phone.name}}</span>
         <p>{{phone.snippet}}</p>
     </li>
 </ul>
-
+<p>Total number of phones: {{phones.length}}</p>
+<table>
+    <tr><th>Row number</th></tr>
+    <tr ng-repeat="i in [0,1,2,3,4]"><td>{{i}}</td></tr>
+</table>
 </body>
