--- a/public/index.html
+++ b/public/index.html
@@ -1,22 +1,30 @@
 <!doctype html>
-<html lang="en" ng-app="phonecatApp" ng-controller="PhoneListCtrl">
+<html lang="en" ng-app="phonecatApp" >
 <head>
     <meta charset="utf-8">
-    <title ng-bind-template="Google Phone Galley: {{query}}">Google Phone Gallery</title>
-    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
+    <title>Google Phone Gallery</title>
+    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="css/app.css">
     <script src="bower_components/angular/angular.js"></script>
     <script src="js/controllers.js"></script>
 </head>
-<body>
+<body ng-controller="PhoneListCtrl">
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-2">
-                Search: <input ng-model="query">
+                <label>Search:</label> <input ng-model="query">
+                <label>Sort By:</label> <span class="text-danger">{{orderProp}}</span>
+                <select ng-model="orderProp">
+                    <option value="name">Alphabetical a-z</option>
+                    <option value="-name">Alphabetical z-a</option>
+                    <option value="age">Newest</option>
+                    <option value="-age">Oldest</option>
+                </select>
             </div>
             <div class="col-md-10">
                 <ul class="phones">
-                    <li ng-repeat="phone in phones | filter: query">
+                    <li ng-repeat="phone in phones | filter: query | orderBy: orderProp">
                         {{phone.name}}
                         <p>{{phone.snippet}}</p>
                     </li>
