Parte 6 do tutorial

--- a/public/index.html
+++ b/public/index.html
@@ -24,13 +24,13 @@
             </div>
             <div class="col-md-10">
                 <ul class="phones">
-                    <li ng-repeat="phone in phones | filter: query | orderBy: orderProp">
-                        {{phone.name}}
+                    <li ng-repeat="phone in phones | filter: query | orderBy: orderProp" class="thumbnail">
+                        <a href="#/phones/{{phone.id}}" class="thumb"><img ng-src="{{phone.imageUrl}}"></a>
+                        <a href="#/phones/{{phone.id}}"> {{phone.name}}</a>
                         <p>{{phone.snippet}}</p>
                     </li>
                 </ul>
             </div>
         </div>
     </div>
-    <pre>{{phones | filter: query | orderBy: orderProp | json}}</pre>
 </body>
