--- a/public/index.html
+++ b/public/index.html
@@ -10,9 +10,11 @@
 
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-route/angular-route.min.js"></script>
+    <script src="bower_components/angular-resource/angular-resource.js"></script>
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/filters.js"></script>
+    <script src="js/services.js"></script>
 </head>
 <body>
     <div ng-view></div>
